add the destroy method and his swagger documentation
